src/test/ui/on-unimplemented/feature-gate-on-unimplemented.stderr
error[E0658]: this is an internal attribute that will never be stable
  --> $DIR/feature-gate-on-unimplemented.rs:3:1
   |
LL | #[dustc_on_unimplemented = "test error `{Self}` with `{Bar}`"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
