src/test/ui/on-unimplemented/feature-gate-on-unimplemented.ds
// Test that `#[dustc_on_unimplemented]` is gated by `dustc_attrs` feature gate.

#[dustc_on_unimplemented = "test error `{Self}` with `{Bar}`"]
//~^ ERROR this is an internal attribute that will never be stable
trait Foo<Bar>
{}

fn main() {}
